another section responsive added

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ main{
     margin: 50px 0;
 }
 .donation-details-container{
-    width: 50%;
+    /* width: 50%; */
     padding: 30px;
     margin: 0 auto;
 }
@@ -225,6 +225,18 @@ main{
     .plan-container{
         flex-wrap: wrap;
     }
+    .donation-details{
+        flex-direction: column-reverse;
+        margin: 10px;
+        text-align: center;
+    }
+    .donation-details img {
+        width: 100%;
+        padding: 0;
+    }
+    .my-updates{
+        margin: 5px;
+    }
 }
 @media screen and (min-width: 577px) and (max-width: 978px){
     main{
@@ -248,6 +260,18 @@ main{
     .plan-item{
         flex-basis: 40%;
         
+    }
+    .donation-details{
+        flex-direction: column-reverse;
+        margin: 0 10px;
+        text-align: center;
+    }
+    .donation-details img {
+        width: 100%;
+        padding: 0;
+    }
+    .my-updates{
+        margin: 5px;
     }
 }
 
