--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@
 /* header styles */
 header{
     width: 100%;
-    min-height: 600px;
     background-image: linear-gradient(to top, rgb(0, 0, 0), rgba(14, 13, 13, 0.11)), url("/images/donation5.jpg");
       background-repeat: no-repeat;
       background-position: center;
@@ -30,11 +29,8 @@ header{
       position: relative;
 }
 .header-container{
-    position: absolute;
-    top: 20%;
-    left: 23%;
     text-align: center;
-    padding: 20px;
+    padding: 200px;
     color: #ffff;
 }
 .header-title{
@@ -237,6 +233,13 @@ main{
     .my-updates{
         margin: 5px;
     }
+    .header-container{
+        padding: 10px;
+        margin: 0;
+    }
+    .header-title{
+        font-size: 45px;
+    }
 }
 @media screen and (min-width: 577px) and (max-width: 978px){
     main{
@@ -272,6 +275,13 @@ main{
     }
     .my-updates{
         margin: 5px;
+    }
+    .header-container{
+        padding: 10px;
+        margin: 0;
+    }
+    .header-title{
+        font-size: 45px;
     }
 }
 
